namespaces/live.cloud-platform.service.justice.gov.uk/cfocats-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "cfocats-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "hmpps-cfo-cloudplatform_public"
    cloud-platform.justice.gov.uk/application: "HMPPS CFO Case Assessment and Tracking System"
    cloud-platform.justice.gov.uk/owner: "Creating Future Opportunities (CFO): cfo-ict@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/CFO-CaseAssessmentTrackingSystem"
    cloud-platform.justice.gov.uk/team-name: "hmpps-creating-future-opportunities-devs"
    cloud-platform.justice.gov.uk/review-after: "2025-06-19"
